# quiz-prep

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .yamllint.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  k8s.yaml  mise.toml  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  mcp-release.yml  release.yml
docs/: api.md  cli.md  contributing.md  index.md  mcp-server.md  question-format.md  quiz-settings.md  releases.md  security.md  tools.md
mcp/: CHANGELOG.md  Dockerfile  app.py  client.py  requirements.txt  resources.py  server.py  tools.py
mcp/tests/: test_client.py  test_resources.py  test_tools.py
scripts/: reset_mcp.py  seed.py  seed_mcp.py
src/: db.py
src/api/: main.py  schemas.py
src/api/routes/: questions.py  quizzes.py  scores.py
src/cli/: main.py
src/cli/commands/: questions_cmd.py  quiz_cmd.py  scores_cmd.py
src/web/: index.html
tests/: conftest.py
tests/api/: questions.hurl  quizzes.hurl  scores.hurl
tests/cli/: test_db.py  test_questions_cmd.py  test_quiz_cmd.py
tests/fixtures/: aws-sa.yaml  cka.yaml  claude.yaml  gitops.yaml
